# CoinTraderMain

./: .env  .env.example  .gitignore  BEAST_MODE.md  CLEANUP_LOG.md  README.md  READY_TO_RUN.md  argent_service.py  ecosystem.config.js  goal.md  health_check.py  key.lk  launcher.py  pyproject.toml  run.py  run_headless.py  run_v2.py  setup.sh  start.sh  view_live_portfolio.py
apps/: __init__.py
core/: asset_class.py  base_persistence.py  bot_controller.py  candle_store.py  config.py  config_manager.py  coverage.py  events.py  live_persistence.py  live_portfolio.py  logger.py  logging_utils.py  mode_config.py  mode_configs.py  mode_paths.py  paper_persistence.py  paper_portfolio.py  paper_state.py  persistence.py  pnl_engine.py  portfolio.py  portfolio_history.py  position_registry.py  profiles.py  session_stats.py  shared_state.py  signal_logger.py  state.py  strategy_registry.py  trade_analytics.py  trading_container.py  trading_factory.py  trading_interfaces.py
dashboard/: __init__.py  display.py  panels.py
data/: cointrader.duckdb  config_audit.jsonl  live_accuracy_report.json  live_orders.json.bak  live_positions.json  live_positions.json.bak  paper_positions.json  paper_positions.json.bak  status.json
datafeeds/: __init__.py  coinbase_fetcher.py  scanner_manager.py
docs/: ARCHITECTURE.md  BOOT_PROCESS.md  CONFIG_IDEOLOGY.md  EXTENDING.md  GAMEPLAN.md  REFACTOR_PLAN.md  data_sync_requirements.md
execution/: background_backfill.py  entry_gates.py  exchange_sync.py  exit_manager.py  live_executor.py  live_stops.py  order_manager.py  order_persistence.py  (+12 more)
(+142 files in other folders)
